Fix usage animation on IE, fix bugs on browsers also mobile

--- a/resources/assets/sass/modules/notifications.scss
+++ b/resources/assets/sass/modules/notifications.scss
@@ -164,17 +164,23 @@
                 width 0s $animation--duration-slow $animation--timing;
   }
 
+  &:before {
+    opacity: 0;
+  }
   &:before,
   &:after {
     content: '';
-    opacity: 0;
     width: 100%;
     height: 15px;
     position: fixed;
     left: 0;
     pointer-events: none;
     transform: translate3d(0, 0, 0);
-    transition: opacity $animation--duration-slow $animation--timing;
+    transition: opacity $animation--duration $animation--timing;
+
+    .ie & {
+      display: none;
+    }
   }
 
   &--scrolled {
@@ -206,10 +212,6 @@
     bottom: 75px;
     z-index: $initial-order + 2;
     background: linear-gradient(to top, darken($color--mine-shaft, 7%) 0%, rgba(40, 40, 40, 0.01) 100%);
-
-    @media (max-width: 767px) {
-      bottom: 80px;
-    }
   }
 
   .notifications--animation & {
@@ -219,16 +221,12 @@
   .notifications--full &,
   .notifications--animation & {
     width: 690px;
-    max-height: calc(100vh - #{$toolbar--height} - #{$spacing-vertical * 2} - 10px - 86px - #{$spacing--small} - 57px);
 
     @media (max-width: 1100px) and (min-width: 1025px) {
       width: 634px;
     }
     @media (max-width: 780px) {
       width: 679px;
-    }
-    @media (max-width: 767px) {
-      max-height: calc(100vh - #{$toolbar--height} - #{$spacing-vertical} - 10px - 33px - #{$spacing--small} - 65px);
     }
 
     &:before {
@@ -239,7 +237,7 @@
       }
     }
     &:after {
-      bottom: 84px;
+      bottom: 75px;
 
       @media (max-width: 767px) {
         bottom: 81px;
