--- a/resources/assets/sass/modules/usage.scss
+++ b/resources/assets/sass/modules/usage.scss
@@ -192,38 +192,50 @@
 }
 
 .usage-info__name {
-	width: 111px;
-	white-space: nowrap;
-
-	// @media (min-width: 1025px) {
-	// 	.sidebar--collapsed & {
-	// 		width: 100%;
-	// 		margin-bottom: 1px;
-	// 	}
-	// }
+	@media (min-width: 1025px) {
+		.sidebar--collapsed & {
+			margin-bottom: 6px;
+		}
+	}
 }
 
 .usage-info__content {
-	width: 100%;
-	margin-top: -23px;
-	margin-left: 0;
-	padding-left: 111px;
-	position: relative;
-	align-content: space-between;
-	align-self: center;
-	text-align: right;
-	transition: margin $animation--duration-slow $animation--timing,
-							padding $animation--duration-slow $animation--timing;
-
-	&:last-of-type {
-		margin-top: -10px;
-	}
-
 	@media (min-width: 1025px) {
-		.sidebar--collapsed & {
-			margin-top: 0 !important;
-			padding-left: 0;
+		&:not(:last-of-type) {
+			.sidebar--collapsed & {
+				margin-bottom: 16px;
+			}
 		}
+	}
+}
+
+.usage-info__name {
+	width: 111px;
+	white-space: nowrap;
+	transition: margin $animation--duration-slow $animation--timing;
+}
+
+.usage-info__bar,
+.usage-info__content--col {
+	&:before {
+		content: '';
+		width: 100%;
+		height: 6px;
+		border-radius: 6px;
+		float: left;
+		align-self: center;
+		background-color: $color--mine-shaft;
+		transition: width $animation--duration-slow $animation--timing;
+	}
+	&:after {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		height: 6px;
+		border-radius: 6px;
+		background-color: red;
+		transition: width $animation--duration-slow $animation--timing;
 	}
 
 	$i: 0;
@@ -255,45 +267,34 @@
 					background-color: $color--sunset-orange;
 				}
 			}
-
-			&:after {
-				$percentage: percentage($i / 100);
-
-				width: calc(#{$percentage} - #{$i / 2.56}px);
-
-				.sidebar--collapsed & {
-					width: calc(#{$percentage} - #{$i / 2.94}px);
-				}
-			}
 		}
 
 		$i: $i + 1;
 	}
+}
 
-	&:before {
-		content: '';
-		width: calc(100% - 39px);
-		height: 6px;
-		border-radius: 6px;
-		float: left;
-		align-self: center;
-		background-color: $color--mine-shaft;
-		transition: width $animation--duration-slow $animation--timing;
+.usage-info__content {
+	width: 100%;
+	margin-top: -27px;
+	margin-left: 0;
+	padding-left: 111px;
+	position: relative;
+	align-content: space-between;
+	align-self: center;
+	text-align: right;
+	font-size: $font-size--small;
+	transition: margin $animation--duration-slow $animation--timing,
+							padding $animation--duration-slow $animation--timing;
 
-		@media (min-width: 1025px) {
-			.sidebar--collapsed & {
-				width: calc(100% - 34px);
-			}
-		}
+	&:last-of-type {
+		margin-top: -10px;
 	}
-	&:after {
-		content: '';
-		float: left;
-		height: 6px;
-		margin-top: -6px;
-		border-radius: 6px;
-		background-color: red;
-		transition: width $animation--duration-slow $animation--timing;
+
+	@media (min-width: 1025px) {
+		.sidebar--collapsed & {
+			margin-top: 0 !important;
+			padding-left: 0;
+		}
 	}
 
 	&--only-bar {
@@ -309,8 +310,9 @@
 
 	&--col {
 		width: 90px;
+		padding-left: 0;
 		position: absolute;
-		top: 32px;
+		top: 45px;
 		right: 29px;
 
 		@media (min-width: 1200px) and (max-width: 1400px) {
@@ -338,6 +340,88 @@
 
 			$i: $i + 1;
 		}
+	}
+}
+
+.usage-info__bar {
+	$i: 0;
+
+	@while $i < 100 {
+		&[data-usage-traffic="#{$i}%"] {
+			&:after {
+				$percentage: percentage($i / 100);
+
+				width: calc(#{$percentage} - #{round($i / 2.56)}px);
+			}
+		}
+
+		$i: $i + 1;
+	}
+
+	&:before {
+		width: calc(100% - 39px);
+
+		@media (min-width: 1025px) {
+			.sidebar--collapsed & {
+				width: calc(100% - 34px);
+			}
+		}
+
+		.ie &,
+		.edge & {
+			width: calc(100% - 34px) !important;
+		}
+	}
+}
+
+.usage-info__bar {
+	width: 100%;
+	height: 6px;
+	display: block;
+	position: relative;
+
+	// &:before {
+	// 	content: '';
+	// 	width: calc(100% - 39px);
+	// 	height: 6px;
+	// 	border-radius: 6px;
+	// 	float: left;
+	// 	align-self: center;
+	// 	background-color: $color--mine-shaft;
+	// 	transition: width $animation--duration-slow $animation--timing;
+	//
+	// 	@media (min-width: 1025px) {
+	// 		.sidebar--collapsed & {
+	// 			width: calc(100% - 34px);
+	// 		}
+	// 	}
+	//
+	// 	.ie &,
+	// 	.edge & {
+	// 		width: calc(100% - 34px) !important;
+	// 	}
+	// }
+	// &:after {
+	// 	content: '';
+	// 	position: absolute;
+	// 	top: 0;
+	// 	left: 0;
+	// 	height: 6px;
+	// 	border-radius: 6px;
+	// 	background-color: red;
+	// 	transition: width $animation--duration-slow $animation--timing;
+	// }
+}
+
+.usage-info__content__text {
+	position: absolute;
+	top: -5px;
+	right: 0;
+
+	.ie &,
+	.edge &,
+	.safari & {
+		top: -4px;
 	}
 }
 
@@ -394,7 +478,8 @@
 
 	@media (min-width: 1025px) {
 		.sidebar--collapsed & {
-			display: none;
+			opacity: 0;
+			visibility: hidden;
 		}
 	}
 }
